# connect-four

./: .gitignore  .travis-ci.yml  .travis.yml  CMakeLists.txt  Dockerfile  Field.h  Game.h  Main  Makefile  Player.h  README.md  main.cpp
src/: CMakeLists.txt  Cell.cpp  Cell.h  Field.cpp  Field.h  Game.cpp  Game.h  GameState.h  GtkView.cpp  GtkView.h  IView.h  Makefile  Player.cpp  Player.h  main.cpp
test/: CMakeLists.txt  CellTest.cc  FieldTest.cc  GameTest.cc  Makefile  PlayerTest.cc  runTests  tests.cpp
